added sleep for slow videos

--- a/RastreoObjetos.ipynb
+++ b/RastreoObjetos.ipynb
@@ -33,6 +33,7 @@
    "source": [
     "import cv2\n",
     "import sys\n",
+    "from time import sleep\n",
     "\n",
     "tracker_type = 'MOSSE'\n",
     "video_path = 'videos/Barca.mp4'"
@@ -134,6 +135,7 @@
    "outputs": [],
    "source": [
     "while True:\n",
+    "    sleep(0.02)\n",
     "    ok, frame = video.read()\n",
     "    if not ok:\n",
     "        cv2.destroyAllWindows()\n",
